# Fah

./: .gitignore  README.md  audio_hotkey.py  config.yaml  install.ps1  install.sh  pyproject.toml  requirements.txt  start_mac.sh  start_windows.bat
fah/: __init__.py  __main__.py
